fix: backface-visibility

--- a/styles/index.css
+++ b/styles/index.css
@@ -221,7 +221,7 @@ button {
 }
 
 .card-cover {
-  backface-visibility: hidden;
+  backface-visibility: visible;
 }
 
 .card-image-container {
